--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,22 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bbf683">  <td>20/05/20 14:41:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@73d4cc9e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@2128734704</td>   <td></td> </tr>
-<tr bgcolor="70a3d8">  <td>20/05/20 14:41:50</td>   <td>20504</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomtwoAdultOneChildTC_2(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@73d4cc9e]">bookingSingleRoomtwoAdultOneChildTC_2</td> 
-  <td>TestNG-test=Test-1@2128734704</td>   <td></td> </tr>
-<tr bgcolor="bbf683">  <td>20/05/20 14:43:20</td>   <td>110522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@73d4cc9e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@2128734704</td>   <td></td> </tr>
-<tr bgcolor="bbf683">  <td>20/05/20 14:43:20</td>   <td>110524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@73d4cc9e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@2128734704</td>   <td></td> </tr>
-<tr bgcolor="70a3d8">  <td>20/05/20 14:43:41</td>   <td>131599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomtwoAdultOneChildTC_2(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@73d4cc9e]">bookingSingleRoomtwoAdultOneChildTC_2</td> 
-  <td>TestNG-test=Test-1@2128734704</td>   <td></td> </tr>
-<tr bgcolor="bbf683">  <td>20/05/20 14:43:54</td>   <td>145082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@73d4cc9e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@2128734704</td>   <td></td> </tr>
-<tr bgcolor="bbf683">  <td>20/05/20 14:43:54</td>   <td>145083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@73d4cc9e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@2128734704</td>   <td></td> </tr>
-<tr bgcolor="70a3d8">  <td>20/05/20 14:44:29</td>   <td>180285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomtwoAdultOneChildTC_2(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@73d4cc9e]">bookingSingleRoomtwoAdultOneChildTC_2</td> 
-  <td>TestNG-test=Test-1@2128734704</td>   <td></td> </tr>
-<tr bgcolor="bbf683">  <td>20/05/20 14:44:31</td>   <td>181612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@73d4cc9e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-1@2128734704</td>   <td></td> </tr>
+<tr bgcolor="a8baa7">  <td>20/05/22 10:39:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="887071">  <td>20/05/22 10:39:52</td>   <td>25569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">bookingSingleRoomWithThreeAdults_TC_1</td> 
+  <td>TestNG-test=Test-1@1267837887</td>   <td></td> </tr>
+<tr bgcolor="a8baa7">  <td>20/05/22 10:43:34</td>   <td>246992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="a8baa7">  <td>20/05/22 10:43:34</td>   <td>246994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="887071">  <td>20/05/22 10:43:56</td>   <td>269703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomtwoAdultOneChildTC_2(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">bookingSingleRoomtwoAdultOneChildTC_2</td> 
+  <td>TestNG-test=Test-2@1508749990</td>   <td></td> </tr>
+<tr bgcolor="a8baa7">  <td>20/05/22 10:48:01</td>   <td>514014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="a8baa7">  <td>20/05/22 10:48:01</td>   <td>514017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="887071">  <td>20/05/22 10:48:15</td>   <td>528202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomThreeAdultAndOneChildWithMultipleCities_AdditionalChanges_TC_3(java.lang.reflect.Method)[pri:3, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">bookingTwoRoomThreeAdultAndOneChildWithMultipleCities_AdditionalChanges_TC_3</td> 
+  <td>TestNG-test=Test-3@2063483248</td>   <td></td> </tr>
+<tr bgcolor="a8baa7">  <td>20/05/22 10:59:04</td>   <td>1177706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="a8baa7">  <td>20/05/22 10:59:04</td>   <td>1177709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="887071">  <td>20/05/22 10:59:30</td>   <td>1203109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.flightBookingWithFirstPackage_TC_4_Additional_changes(java.lang.reflect.Method)[pri:4, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">flightBookingWithFirstPackage_TC_4_Additional_changes</td> 
+  <td>TestNG-test=Test-4@311328841</td>   <td></td> </tr>
+<tr bgcolor="a8baa7">  <td>20/05/22 11:04:08</td>   <td>1481300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="a8baa7">  <td>20/05/22 11:04:08</td>   <td>1481303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="887071">  <td>20/05/22 11:04:33</td>   <td>1505950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomTwoAdultTwoChild_WithChanges_TC_5(java.lang.reflect.Method)[pri:5, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">bookingTwoRoomTwoAdultTwoChild_WithChanges_TC_5</td> 
+  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="a8baa7">  <td>20/05/22 11:10:45</td>   <td>1878621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="a8baa7">  <td>20/05/22 11:10:45</td>   <td>1878622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="887071">  <td>20/05/22 11:10:58</td>   <td>1890901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightsWithmultipleCities_TC_6(java.lang.reflect.Method)[pri:6, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">bookingFlightsWithmultipleCities_TC_6</td> 
+  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
+<tr bgcolor="a8baa7">  <td>20/05/22 11:23:34</td>   <td>2647428</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6483f5ae]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@2005081191</td>   <td></td> </tr>
 </table>
