--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,6 +4,62 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>com.tripmasters.framework.testScript.HomePageTestScript</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0016_verifyFooterText</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0012_verifyOtherVacationPackages</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0013_verifyPopularVacationPackages</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0010_verifyCity</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0015_verifyStartAgainLink</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0011_verifyMoreHighlightAndAttractionLinks</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>com.tripmasters.framework.testScript.BookingPageTestScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -11,33 +67,68 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingFlightsWithmultipleCities_TC_6</td>
+<td>TC_0018_bookingDetailswithPremiumEcomomy</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>flightBookingWithFirstPackage_TC_4_Additional_changes</td>
+<td>TC_0006_bookingFlightsWithmultipleCities</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingTwoRoomTwoAdultTwoChild_WithChanges_TC_5</td>
+<td>TC_0001_bookingSingleRoomWithThreeAdults</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingTwoRoomThreeAdultAndOneChildWithMultipleCities_AdditionalChanges_TC_3</td>
+<td>TC_0008_europePageBookingForMultipleCities</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingSingleRoomtwoAdultOneChildTC_2</td>
+<td>TC_0017_removeAddedCity_WithAdditonalChanges</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingSingleRoomWithThreeAdults_TC_1</td>
+<td>TC_0002_bookingSingleRoomtwoAdultOneChild</td>
 <td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0007_bookingFlightAndHotelForSingleCity</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0005_bookingwithoutmultiplecityOneAdultOneChild</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0021_tripSummarymultipleCities</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0003_bookingTwoRoomThreeAdultAndOneChildWithMultipleCities</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0014_verifySpotlightLink</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0004_flightBookingWithFirstPackage</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0009_arrival_dateChanging</td>
+<td>regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
