Final_Code_22May

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,17 +11,77 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingSingleRoomWithThreeAdults_TC_1</td>
+<td>TC_0007_bookingFlightAndHotelForSingleCitywithTopDealsValidation</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingTwoRoomTwoAdult_TC_3</td>
+<td>TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingSingleRoomOneAdultOneChild_TC_2</td>
+<td>TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage</td>
+<td>testdemo </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0018_bookingDetailswithPremiumEcomomy</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0008_bookingFlightAndHotelwithMultipleCitiesForEuropePage</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0002_bookingJourneyWithFlightAndTrain</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0003_bookingTwoRoomTwoAdult</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0009_dateChanging</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0020_getWithoutAir</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0019_withoutAirBookingForSingleCity</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0004_FirstPackageoptionalongwithRemoveHotelFunc</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0001_bookingJourneyWithOutAirForTwoRoomsPAXDetails</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0021_multipleCities</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0014_verifySpotlightLink</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0005_FlightbookingjourneywithBYOPackage</td>
 <td>smoke </td>
 </tr>
 <tr>
