--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="956e91">  <td>20/04/29 13:26:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomOneAdultOneChild_TC_2(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">bookingSingleRoomOneAdultOneChild_TC_2</td> 
-  <td>main@439928219</td>   <td></td> </tr>
-<tr bgcolor="956e91">  <td>20/04/29 13:18:49</td>   <td>-470410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">bookingSingleRoomWithThreeAdults_TC_1</td> 
-  <td>main@439928219</td>   <td></td> </tr>
-<tr bgcolor="956e91">  <td>20/04/29 13:33:33</td>   <td>413158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomTwoAdult_TC_3(java.lang.reflect.Method)[pri:3, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">bookingTwoRoomTwoAdult_TC_3</td> 
-  <td>main@439928219</td>   <td></td> </tr>
-<tr bgcolor="70a3d8">  <td>20/04/29 13:18:24</td>   <td>-495544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@439928219</td>   <td></td> </tr>
-<tr bgcolor="70a3d8">  <td>20/04/29 13:26:27</td>   <td>-13004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@439928219</td>   <td></td> </tr>
-<tr bgcolor="70a3d8">  <td>20/04/29 13:33:19</td>   <td>398919</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@439928219</td>   <td></td> </tr>
-<tr bgcolor="70a3d8">  <td>20/04/29 13:26:22</td>   <td>-17377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@439928219</td>   <td></td> </tr>
-<tr bgcolor="70a3d8">  <td>20/04/29 13:33:14</td>   <td>394547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@439928219</td>   <td></td> </tr>
-<tr bgcolor="70a3d8">  <td>20/04/29 13:42:42</td>   <td>962616</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@641147d0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@439928219</td>   <td></td> </tr>
+<tr bgcolor="ef9176">  <td>20/05/22 17:57:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage(java.lang.reflect.Method)[pri:17, instance:com.tripmasters.framework.testScript.BookingPageTestScript@c46bcd4]">TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage</td> 
+  <td>main@1295083508</td>   <td></td> </tr>
+<tr bgcolor="ea97a2">  <td>20/05/22 17:57:31</td>   <td>-17822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@c46bcd4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1295083508</td>   <td></td> </tr>
+<tr bgcolor="ea97a2">  <td>20/05/22 18:07:12</td>   <td>562972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@c46bcd4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1295083508</td>   <td></td> </tr>
 </table>
