--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,16 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0001_bookingJourneyWithOutAirForTwoRoomsPAXDetails</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0007_bookingFlightAndHotelForSingleCitywithTopDealsValidation</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0002_bookingJourneyWithFlightAndTrain</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0005_FlightbookingjourneywithBYOPackage</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0019_withoutAirBookingForSingleCity</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0004_FirstPackageoptionalongwithRemoveHotelFunc</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0008_bookingFlightAndHotelwithMultipleCitiesForEuropePage</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPremiumEcomomy</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0020_getWithoutAir</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0009_dateChanging</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0003_bookingTwoRoomTwoAdult</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0014_verifySpotlightLink</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0021_multipleCities</td></tr>
 </table>
