--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -67,12 +67,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0018_bookingDetailswithPremiumEcomomy</td>
+<td>TC_0005_FlightbookingjourneywithPaxmandatoryfieldvalidation</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0006_bookingFlightsWithmultipleCities</td>
+<td>TC_0018_bookingDetailswithPremiumEcomomy</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -82,12 +82,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0008_europePageBookingForMultipleCities</td>
+<td>TC_0006_bookingFlightsWithmultipleCities</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0017_removeAddedCity_WithAdditonalChanges</td>
+<td>TC_0008_europePageBookingForMultipleCities</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -102,7 +102,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0005_bookingwithoutmultiplecityOneAdultOneChild</td>
+<td>TC_0017_validateTripSummarywithMultipleCitiesforExploreAsiaPage</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -128,7 +128,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>TC_0009_arrival_dateChanging</td>
-<td>regression </td>
+<td>smoke </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
