--- a/test-output/index.html
+++ b/test-output/index.html
@@ -5,7 +5,7 @@
   <meta charset='utf-8'>
   <title>TestNG reports</title>
 
-    <link type="text/css" href="testng-reports.css" rel="stylesheet" />  
+    <link type="text/css" href="testng-reports.css" rel="stylesheet" />
     <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="testng-reports.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\chauhanlove\AppData\Local\Temp\testng-eclipse-359352680\testng-customsuite.xml</span>
+                    <span>C:\Users\Hp\AppData\Local\Temp\testng-eclipse-1147776350\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0017_validateTripSummarywi...)">TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0017_validateTripSummarywi...)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="TC_0018_bookingDetailswithPremiumEcomomy(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPre...)">TC_0018_bookingDetailswithPremiumEcomomy(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPre...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,10 +125,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0017_validateTripSummarywi...)">
-                  </a> <!-- TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0017_validateTripSummarywi...) -->
-                  <span class="method-name">TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage</span>
-                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage(java.lang.reflect.Method) throws java.lang.Exception)</span>
+                  <a name="TC_0018_bookingDetailswithPremiumEcomomy(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPre...)">
+                  </a> <!-- TC_0018_bookingDetailswithPremiumEcomomy(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPre...) -->
+                  <span class="method-name">TC_0018_bookingDetailswithPremiumEcomomy</span>
+                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPremiumEcomomy(java.lang.reflect.Method) throws java.lang.Exception)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,18 +136,18 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\chauhanlove\AppData\Local\Temp\testng-eclipse-359352680\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Hp\AppData\Local\Temp\testng-eclipse-1147776350\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
-  &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.tripmasters.framework.testScript.BookingPageTestScript&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage&quot;/&gt;
+          &lt;include name=&quot;TC_0018_bookingDetailswithPremiumEcomomy&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- com.tripmasters.framework.testScript.BookingPageTestScript --&gt;
     &lt;/classes&gt;
@@ -174,10 +174,10 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">testdemo</span>
+              <span class="test-group-name">test</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage</span>
+                <span class="method-in-group-name">TC_0018_bookingDetailswithPremiumEcomomy</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -199,14 +199,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage')
+data.setCell(0, 1, 'TC_0018_bookingDetailswithPremiumEcomomy')
 data.setCell(0, 2, 'com.tripmasters.framework.testScript.BookingPageTestScript')
-data.setCell(0, 3, 562968);
+data.setCell(0, 3, 115580);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 minutes</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -233,27 +233,27 @@ return data;
                 <br/>
                 <span class="ignored-method-name">TC_0002_bookingJourneyWithFlightAndTrain</span>
                 <br/>
-                <span class="ignored-method-name">TC_0005_FlightbookingjourneywithBYOPackage</span>
-                <br/>
                 <span class="ignored-method-name">TC_0019_withoutAirBookingForSingleCity</span>
                 <br/>
                 <span class="ignored-method-name">TC_0004_FirstPackageoptionalongwithRemoveHotelFunc</span>
                 <br/>
                 <span class="ignored-method-name">TC_0008_bookingFlightAndHotelwithMultipleCitiesForEuropePage</span>
                 <br/>
-                <span class="ignored-method-name">TC_0018_bookingDetailswithPremiumEcomomy</span>
-                <br/>
-                <span class="ignored-method-name">TC_0020_getWithoutAir</span>
+                <span class="ignored-method-name">TC_0005_FlightbookingjourneywithBuyYourOwnPackage</span>
                 <br/>
                 <span class="ignored-method-name">TC_0009_dateChanging</span>
                 <br/>
+                <span class="ignored-method-name">TC_0020_withoutAirBookingForMultipleCity</span>
+                <br/>
                 <span class="ignored-method-name">TC_0003_bookingTwoRoomTwoAdult</span>
+                <br/>
+                <span class="ignored-method-name">TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage</span>
                 <br/>
                 <span class="ignored-method-name">TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation</span>
                 <br/>
-                <span class="ignored-method-name">TC_0014_verifySpotlightLink</span>
+                <span class="ignored-method-name">TC_0021_FlightbookingJourneywithmultipleCities</span>
                 <br/>
-                <span class="ignored-method-name">TC_0021_multipleCities</span>
+                <span class="ignored-method-name">TC_0014_verifySpotlightLink</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -271,12 +271,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0017_validateTripSummarywi...)</span>
-                <span class="method-start">17822 ms</span>
+                <span class="method-name">TC_0018_bookingDetailswithPremiumEcomomy(public void com.tripmasters.framework.testScript.BookingPageTestScript.TC_0018_bookingDetailswithPre...)</span>
+                <span class="method-start">23788 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">580794 ms</span>
+                <span class="method-start">139373 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
