--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -16,17 +16,27 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage</td>
-<td>testdemo </td>
+<td>TC_0018_bookingDetailswithPremiumEcomomy</td>
+<td>test </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0018_bookingDetailswithPremiumEcomomy</td>
+<td>TC_0020_withoutAirBookingForMultipleCity</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0005_FlightbookingjourneywithBuyYourOwnPackage</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -41,7 +51,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0003_bookingTwoRoomTwoAdult</td>
+<td>TC_0019_withoutAirBookingForSingleCity</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -51,17 +61,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0020_getWithoutAir</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_0019_withoutAirBookingForSingleCity</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_0004_FirstPackageoptionalongwithRemoveHotelFunc</td>
+<td>TC_0003_bookingTwoRoomTwoAdult</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -71,7 +71,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0021_multipleCities</td>
+<td>TC_0004_FirstPackageoptionalongwithRemoveHotelFunc</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -81,7 +81,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0005_FlightbookingjourneywithBYOPackage</td>
+<td>TC_0021_FlightbookingJourneywithmultipleCities</td>
 <td>smoke </td>
 </tr>
 <tr>
