--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ea97a2">  <td>20/05/22 17:57:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@c46bcd4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1295083508</td>   <td></td> </tr>
-<tr bgcolor="ef9176">  <td>20/05/22 17:57:49</td>   <td>17822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage(java.lang.reflect.Method)[pri:17, instance:com.tripmasters.framework.testScript.BookingPageTestScript@c46bcd4]">TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage</td> 
-  <td>main@1295083508</td>   <td></td> </tr>
-<tr bgcolor="ea97a2">  <td>20/05/22 18:07:12</td>   <td>580794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@c46bcd4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1295083508</td>   <td></td> </tr>
+<tr bgcolor="eb8acf">  <td>20/06/08 12:45:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@3c0a50da]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@660017404</td>   <td></td> </tr>
+<tr bgcolor="fe7d71">  <td>20/06/08 12:45:36</td>   <td>23786</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.TC_0018_bookingDetailswithPremiumEcomomy(java.lang.reflect.Method)[pri:18, instance:com.tripmasters.framework.testScript.BookingPageTestScript@3c0a50da]">TC_0018_bookingDetailswithPremiumEcomomy</td> 
+  <td>main@660017404</td>   <td></td> </tr>
+<tr bgcolor="eb8acf">  <td>20/06/08 12:47:31</td>   <td>139371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@3c0a50da]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@660017404</td>   <td></td> </tr>
 </table>
