--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,27 +11,32 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyFooterText_TC_16</td>
+<td>TC_0016_verifyFooterText</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyOtherVacationPackages_TC_12</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyMoreHighlightAndAttractionLinks_Mob_TC_11</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyCity_TC_10</td>
+<td>TC_0012_verifyOtherVacationPackages</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyStartAgainLink_TC_15</td>
+<td>TC_0013_verifyPopularVacationPackages</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0010_verifyCity</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0015_verifyStartAgainLink</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0011_verifyMoreHighlightAndAttractionLinks</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -62,67 +67,67 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingFlightAndHotelForMultipleCity_TC_8</td>
+<td>TC_0005_FlightbookingjourneywithPaxmandatoryfieldvalidation</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySpotlightLink_TC_14</td>
+<td>TC_0018_bookingDetailswithPremiumEcomomy</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0009_arrival_dateChanging_FromTopOptions</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0001_bookingSingleRoomWithThreeAdults</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0006_bookingFlightsWithmultipleCities</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0002_bookingSingleRoomtwoAdultOneChild</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0007_bookingFlightAndTwoRoomsWithAdultsAndChilds_FromTopDalPackages</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0017_validateTripSummarywithMultipleCitiesforExploreAsiaPage</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0021_tripSummarymultipleCities</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0004_bookingFlightAndSingleRoomWithTwoAdults_FromFirstPackages</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0008_bookingFlightMultipleCitiesAndTwoRoomsWithAdultsAndChilds_FromEuropePage</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0014_verifySpotlightLink</td>
 <td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>dateChanging_TC_9</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingFlightAndHotelForSingleCity_TC_7</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingDetailswithPremiumEcomomy_TC_18</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingFlightsWithmultipleCities_TC_6</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>removeAddedCity_TC_17</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingSingleRoomWithThreeAdults_TC_1</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingTwoRoomThreeAdultOneChild_TC_4</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>multipleCities_TC_21</td>
-<td>testdemo </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingTwoRoomTwoAdult_TC_3</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingSingleRoomOneAdultOneChild_TC_2</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bookingTwoRoomTwoAdultTwoChild_TC_5</td>
+<td>TC_0003_bookingTwoRoomThreeAdultAndOneChildWithMultipleCities</td>
 <td>smoke </td>
 </tr>
 <tr>
