--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,6 +4,62 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>com.tripmasters.framework.testScript.HomePageTestScript</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0010_verifySearchCity</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0016_verifyFooterText</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0012_verifyOtherVacationPackages</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0013_verifyPopularVacationPackages</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0015_verifyStartAgainLink</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0011_verifyMoreHighlightAndAttractionLinks</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>com.tripmasters.framework.testScript.BookingPageTestScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -16,12 +72,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation</td>
+<td>TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0017_validateTripSummarywithMultipleCitiesforAsianPacificPage</td>
+<td>TC_0006_bookingFlightsWithmultipleCitieswithHighLightsValidation</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -36,6 +92,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>TC_0005_FlightbookingjourneywithBuyYourOwnPackage</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>TC_0008_bookingFlightAndHotelwithMultipleCitiesForEuropePage</td>
 <td>smoke </td>
 </tr>
@@ -46,17 +107,17 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>TC_0019_withoutAirBookingForSingleCity</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>TC_0009_dateChanging</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>TC_0003_bookingTwoRoomTwoAdult</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_0019_withoutAirBookingForSingleCity</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -77,11 +138,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>TC_0021_FlightbookingJourneywithmultipleCities</td>
-<td>testdemo </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_0005_FlightbookingjourneywithBYOPackage</td>
 <td>smoke </td>
 </tr>
 <tr>
