--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,17 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.TC_0013_verifyPopularVacationPackages</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0019_withoutAirBookingForSingleCity</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0002_bookingSingleRoomtwoAdultOneChild</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.TC_0016_verifyFooterText</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.TC_0012_verifyOtherVacationPackages</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.TC_0011_verifyMoreHighlightAndAttractionLinks</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0001_bookingSingleRoomWithThreeAdults</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0020_withoutAirBookingForMultipleCity</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.TC_0010_verifyCity</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0005_FlightbookingjourneywithPaxmandatoryfieldvalidation</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0004_bookingFlightAndSingleRoomWithTwoAdults_FromFirstPackages</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0003_bookingTwoRoomThreeAdultAndOneChildWithMultipleCities</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0014_verifySpotlightLink</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.TC_0015_verifyStartAgainLink</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.TC_0006_bookingFlightsWithmultipleCities</td></tr>
 </table>
