--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,62 +4,6 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.tripmasters.framework.testScript.HomePageTestScript</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_0016_verifyFooterText</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_0012_verifyOtherVacationPackages</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_0013_verifyPopularVacationPackages</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_0010_verifyCity</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_0015_verifyStartAgainLink</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_0011_verifyMoreHighlightAndAttractionLinks</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>setUp</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
 <td>com.tripmasters.framework.testScript.BookingPageTestScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -73,7 +17,12 @@
 <tr>
 <td>&nbsp;</td>
 <td>TC_0018_bookingDetailswithPremiumEcomomy</td>
-<td>smoke </td>
+<td>smok </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0009_arrival_dateChanging_FromTopOptions</td>
+<td>smok </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -87,7 +36,17 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0008_europePageBookingForMultipleCities</td>
+<td>TC_0020_withoutAirBookingForMultipleCity</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0007_bookingFlightAndTwoRoomsWithAdultsAndChilds_FromTopDealPackages</td>
+<td>smok </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0019_withoutAirBookingForSingleCity</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -97,18 +56,23 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0007_bookingFlightAndHotelForSingleCity</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>TC_0017_validateTripSummarywithMultipleCitiesforExploreAsiaPage</td>
-<td>smoke </td>
+<td>smok </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>TC_0021_tripSummarymultipleCities</td>
+<td>smok </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0004_bookingFlightAndSingleRoomWithTwoAdults_FromFirstPackages</td>
 <td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0008_bookingFlightMultipleCitiesAndTwoRoomsWithAdultsAndChilds_FromEuropePage</td>
+<td>smok </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -119,16 +83,6 @@
 <td>&nbsp;</td>
 <td>TC_0014_verifySpotlightLink</td>
 <td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_0004_flightBookingWithFirstPackage</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_0009_arrival_dateChanging</td>
-<td>smoke </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
