--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -92,12 +92,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0002_bookingSingleRoomtwoAdultOneChild</td>
+<td>TC_0020_withoutAirBookingForMultipleCity</td>
 <td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0007_bookingFlightAndTwoRoomsWithAdultsAndChilds_FromTopDalPackages</td>
+<td>TC_0007_bookingFlightAndTwoRoomsWithAdultsAndChilds_FromTopDealPackages</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0019_withoutAirBookingForSingleCity</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>TC_0002_bookingSingleRoomtwoAdultOneChild</td>
 <td>smoke </td>
 </tr>
 <tr>
@@ -122,13 +132,13 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0014_verifySpotlightLink</td>
-<td>regression </td>
+<td>TC_0003_bookingTwoRoomThreeAdultAndOneChildWithMultipleCities</td>
+<td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_0003_bookingTwoRoomThreeAdultAndOneChildWithMultipleCities</td>
-<td>smoke </td>
+<td>TC_0014_verifySpotlightLink</td>
+<td>regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
